--- a/book-recommender/src/App.css
+++ b/book-recommender/src/App.css
@@ -1,3 +1,8 @@
+#body {
+  background: #242424;
+  color: #ffffff;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -5,38 +10,79 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.wrapper {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+header {
+  text-align: center;
+  padding: 40px 0;
 }
 
-.card {
-  padding: 2em;
+h1 {
+  color: white;
+  margin: 0;
 }
 
-.read-the-docs {
-  color: #888;
+form {
+  width: 100%;
+  max-width: 800px;
+  margin: 8px auto;
+  background: #242424;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0, 1);
+}
+input[type='text'] {
+  width: 100%;
+  padding: 12px;
+  margin: 8px 0;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  background-color: #121212;
+  color: white;
+}
+
+button {
+  background: #3498db;
+  color: white;
+  padding: 12px 24px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 5px;
+}
+
+button:disabled {
+  background: #bdc3c7;
+}
+
+.error {
+  color: #e74c3c;
+  padding: 10px;
+  border: white;
+}
+
+.recommendation {
+  background: #242424;
+  padding: 20px;
+  margin: 20px auto 0;
+  /* border: 1px solid white; */
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 800px;
+  color: white;
+  display: block;
 }
